# UnBrain

./: .flake8  .gitignore  CoisasAResolver.txt  Makefile  README.md  arx_get.py  config.json  mypy.init  requirements.txt  run.sh  runClient.sh  teste.csv  teste.txt
ALP-GUI/: .gitignore  README.md
ALP-GUI/src/: main.py
ALP-GUI/src/app/: app.css  app.py  app.ui
ALP-GUI/src/helpers/: dict.py  path.py
IGGLU-VSSS/: CMakeLists.txt  ExecuteUnBrain.cpp  README.md  app.py  core.py  editor.py  elements.py  form.ui  form.ui.autosave  header.py  igglu.sh  layouts.py  main.cpp  mainWindowUi.py  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  requirements.txt  serverIgglu.cpp  serverIgglu.h  ui_form.py
IGGLU-VSSS/.qtcreator/Python_3_8_20venv/: pyvenv.cfg
IGGLU-VSSS/customClasses/: core.py  layouts.py  vision.py  widgets.py
IGGLU-VSSS/env-gglu/: pyvenv.cfg
MainSystem/: config.json  integracao.md
MainSystem/controller/: __init__.py
MainSystem/controller/communication/: rosRadio.py  server_pickle.py
MainSystem/controller/control/: UFC.py
MainSystem/controller/states/: debugHLC.py
MainSystem/controller/strategy/: field.py  movements.py  strategy.py
MainSystem/controller/tools/: pixel2metric.py
MainSystem/controller/vision/: __init__.py  cameras.py
MainSystem/controller/world/: ball.py
MainSystem/helpers/: __init__.py
MainSystem/model/: paramsPattern.py
MainSystem/model/vision/: mainVisionModel.py
MainSystem/view/: style.css
MainSystem/view/communication/: communicationView.py
MainSystem/view/tools/: drawing.py  (+6 more)
MainVision/: README.md  config.json  main.py
MainVision/model/: __init__.py
MainVision/view/: __init__.py  main.ui
docs/: data.py  robot.txt
env/: pyvenv.cfg
pygglu/interface/: main.py  mainwindow.ui  ui_mainwindow.py
server/: messages_robocup_ssl_geometry_pb2.py  receiver.py  wrapper_pb2.py
src/: constants.py  loop.py  main.py  teste.py
src/IGGLU/: Nomenclatura.md  color_constants.py  interface_main.py
src/UVF_screen/: __init__.py  pygame_tools.py
src/client/: __init__.py  client_pickle.py  client_webscoket.py  firasim.py  gui.py  referee.py  websocket.py
src/communication/: serialRadio.py  serialWifi.py
src/control/: PIDController.py  SecAttacker.py  Teste_para_planta.py  Twiddle.py  UFC.py  UFC_modified.py  V_e_W.py  __init__.py  defender.py  goalKeeper.py  math.md  midfielder.py
src/strategy/: __init__.py  automaticPlacement.py  automaticReplacer.py  movements.py
src/tools/: __init__.py  interval.py
src/vision/: receiver.py  wrapper_pb2.py
src/world/: __init__.py  elements.py
(+73 files in other folders)
